// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TrendingMovies Match its snapshot. Array provided 1`] = `
<PageLayout
  array={
    Array [
      Object {
        "id": 1,
        "overview": "Some description",
        "title": "Some title",
      },
    ]
  }
  empty={false}
  error={false}
  history={
    Object {
      "push": [Function],
    }
  }
  loading={false}
  totalResults={0}
/>
`;

exports[`Component: TrendingMovies Match its snapshot. Error 1`] = `
<PageLayout
  array={Array []}
  empty={false}
  error={true}
  history={
    Object {
      "push": [Function],
    }
  }
  loading={false}
  totalResults={0}
/>
`;

exports[`Component: TrendingMovies Match its snapshot. Loading ... 1`] = `
<PageLayout
  array={Array []}
  empty={false}
  error={false}
  history={
    Object {
      "push": [Function],
    }
  }
  loading={true}
  totalResults={0}
/>
`;
